{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 8,
  "lineage": "778c0d0f-ea86-3e93-e40b-caed8da7334d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "porteiro",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946647826:security-group/sg-0be1fb0b29e5b9046",
            "description": "acesso ao porteiro por ssh",
            "egress": [],
            "id": "sg-0be1fb0b29e5b9046",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "2804:14c:6592:884d:15d9:c5ee:a237:4d01/128"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "porteiro",
            "name_prefix": "",
            "owner_id": "307946647826",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d84787c58a1fa2c0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "porteiro_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946647826:security-group/sg-0325c61b6d8f2a742",
            "description": "database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0325c61b6d8f2a742",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0be1fb0b29e5b9046"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "bia-db",
            "name_prefix": "",
            "owner_id": "307946647826",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d84787c58a1fa2c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.porteiro"
          ]
        }
      ]
    }
  ]
}